Spacing issues solved for mobile view.

--- a/css/custom-frontpage.css
+++ b/css/custom-frontpage.css
@@ -56,7 +56,7 @@ h4 {
     }
 
 .icon-opensource:hover {
-  color: #e6ad14;
+  color: #585858;
 }
 
 .btn-readmore {
@@ -65,11 +65,26 @@ h4 {
     border-color: #1ba0d7;
 }
 
+.btn-readmore:hover{
+    color: #fff;
+    background-color: #585858;
+    border-color: #585858;
+}
 
 .btn-calltoaction {
     color: #fff;
     background-color: #585858;
     border-color: #585858;
+}
+
+.btn-calltoaction:hover {
+    background-color: #049FD9;
+    border-color: #049FD9;
+    color: #fff;
+}
+
+.mobile-spacing {
+  padding-bottom: 15px;
 }
 
 .copyright-footer a{
@@ -322,6 +337,10 @@ section#video{
       margin-bottom: 10px;
       float: left;
     }
+
+    /*.navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
+        border-bottom: 1px solid #9d9d9d;
+    }*/
     .navbar-brand {
       padding-left: 16px;
     }
@@ -346,6 +365,7 @@ section#video{
       padding-left: 0px;
     }
 }
+
 
 .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover {
     color: #000;
